--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-notification-badge",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "Simple notification badge react component",
   "main": "index.js",
   "scripts": {
@@ -27,35 +27,44 @@
   },
   "homepage": "https://github.com/georgeosddev/react-notification-badge",
   "devDependencies": {
-    "babel-eslint": "^3.1.9",
-    "babelify": "^6.1.2",
-    "browser-sync": "^2.7.6",
-    "browserify": "^10.2.1",
-    "chai": "^2.3.0",
-    "eslint": "^0.21.2",
-    "eslint-plugin-react": "^2.3.0",
-    "karma": "^0.12.35",
-    "karma-browserify": "^4.2.1",
+    "babel-eslint": "^4.1.3",
+    "babelify": "^7.2.0",
+    "browser-sync": "^2.9.11",
+    "browserify": "^12.0.1",
+    "chai": "^3.4.0",
+    "eslint": "^1.8.0",
+    "eslint-plugin-react": "^3.6.3",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.0",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-cli": "0.0.4",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "0.1.1",
     "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.1.10",
+    "karma-mocha": "^0.2.0",
     "karma-safari-launcher": "^0.1.1",
-    "karma-spec-reporter": "0.0.19",
-    "mocha": "^2.2.5",
-    "sinon": "^1.15.1",
-    "watchify": "^3.2.1"
+    "karma-spec-reporter": "0.0.22",
+    "mocha": "^2.3.3",
+    "sinon": "^1.17.2",
+    "watchify": "^3.6.0",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-es2015": "^6.0.15",
+    "react-addons-test-utils": "^0.14.2"
   },
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.14.2",
+    "react-addons-css-transition-group": "^0.14.2",
+    "react-dom": "^0.14.2"
   },
   "browserify": {
     "transform": [
       [
         "babelify",
         {
-          "compact": false
+          "compact": false,
+          "presets": [
+            "es2015",
+            "react"
+          ]
         }
       ]
     ]
