--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   "homepage": "https://github.com/georgeosddev/react-notification-badge",
   "devDependencies": {
     "babel-eslint": "^4.1.3",
+    "babel-polyfill": "^6.0.16",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
     "babelify": "^7.2.0",
     "browser-sync": "^2.9.11",
     "browserify": "^12.0.1",
@@ -44,11 +47,9 @@
     "karma-safari-launcher": "^0.1.1",
     "karma-spec-reporter": "0.0.22",
     "mocha": "^2.3.3",
+    "react-addons-test-utils": "^0.14.2",
     "sinon": "^1.17.2",
-    "watchify": "^3.6.0",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-es2015": "^6.0.15",
-    "react-addons-test-utils": "^0.14.2"
+    "watchify": "^3.6.0"
   },
   "dependencies": {
     "react": "^0.14.2",
