--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-import": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^5.0.1",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.3",
