--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-notification-badge",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Simple notification badge react component",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "browser": "browser-sync start --files example/* --server example",
     "watch:example": "watchify example/app.js -dv -o example/bundle.js",
@@ -39,21 +39,21 @@
     "browser-sync": "^2.12.3",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
     "eslint-plugin-import": "^1.5.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^5.0.1",
-    "karma": "^0.13.22",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2",
+    "karma": "^1.2.0",
     "karma-browserify": "^5.0.3",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-cli": "0.1.2",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.2",
-    "karma-safari-launcher": "^0.1.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
+    "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.26",
-    "mocha": "^2.4.5",
+    "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.0.1",
     "rimraf": "^2.5.2",
     "sinon": "^1.17.3",
