--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "browserify": {
     "transform": [
