--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-notification-badge",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Simple notification badge react component",
   "main": "lib/index.js",
   "scripts": {
@@ -59,7 +59,7 @@
     "sinon": "^1.17.3",
     "watchify": "^3.7.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
