--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.26",
     "mocha": "^3.0.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
     "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.5.4",
     "rimraf": "^2.5.2",
     "sinon": "^1.17.3",
     "watchify": "^3.7.0"
