--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ]
+    ["@babel/env",{
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
+    ],
+    "@babel/react"
+  ],
 }
