--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "browser": "browser-sync start --files example/* --server example",
     "watch:example": "watchify example/app.js -dv -o example/bundle.js",
-    "start:example": "npm run watch:example & npm run browser",
+    "start:example": "yarn run watch:example & yarn run browser",
     "test:local": "karma start",
     "test": "./node_modules/.bin/karma start --browsers Firefox --single-run",
     "clean": "rimraf lib",
@@ -29,22 +29,22 @@
   },
   "homepage": "https://github.com/mobilusoss/react-notification-badge",
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.2",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babelify": "^10.0.0",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.5",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
-    "eslint": "^5.10.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "karma": "^3.1.3",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "karma": "^4.1.0",
     "karma-browserify": "^6.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -53,32 +53,28 @@
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.32",
-    "mocha": "^5.2.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "mocha": "^6.1.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.6.3",
-    "rimraf": "^2.6.2",
-    "sinon": "^7.2.2",
-    "watchify": "^3.11.0"
+    "react-dom": "^16.8.6",
+    "rimraf": "^2.6.3",
+    "sinon": "^7.3.2",
+    "watchify": "^3.11.1"
   },
   "peerDependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "browserify": {
     "transform": [
       [
-        "babelify",
-        {
-          "compact": false,
-          "presets": [
-            "@babel/preset-env",
-            "@babel/preset-react"
-          ]
-        }
+        "babelify"
       ]
     ]
+  },
+  "dependencies": {
+    "core-js": "3"
   }
 }
